# angem

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/angem/: Basis.hpp  BoundingBox.hpp  CollisionGJK.hpp  Collisions.hpp  Envelope.hpp  Hexahedron.hpp  Line.hpp  LineSegment.hpp  OptimizeDistanceToEdges.hpp  Plane.hpp  Point.hpp  PointSet.cpp  PointSet.hpp  PolyGroup.hpp  Polygon.hpp  Polyhedron.hpp  PolyhedronFactory.hpp  Polylabel.hpp  Projections.hpp  Pyramid.hpp  QuickHull.cpp  QuickHull.hpp  QuickHull_impl.hpp  Rectangle.hpp  Rotation.hpp  Shape.hpp  Tensor2.hpp  Tetrahedron.hpp  Transform.hpp  TransformSeries.hpp  VTK_ID.hpp  Wedge.hpp  covariance.hpp  utils.hpp
src/angem/qh_structs/: ConvexHull.hpp  HalfEdgeMesh.hpp  Mesh.hpp  Pool.hpp  Ray.hpp  VertexDataSource.hpp
